# clipscribe

./: .eslintrc.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SETUP.md  index.html  package-lock.json  package.json  vite.config.ts
archive/: README.md
archive/docs/: PROJECT_STATUS.md  engineering-spec.md  gpt5-parsing-error-resolved.md  sample-transcript.vtt
archive/rca/: ffmpeg-error-234.md  investigation-plan.md  test-findings.md
docs/: CLIP_SELECTION_ARCHITECTURE.md  CLIP_SELECTION_SUMMARY.md  GPT5_MIGRATION.md  WHISPER_FEATURE.md
rca/: READY_FOR_TESTING.md  ROOT_CAUSE_FOUND.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
src-tauri/src/commands/: analyze.rs  mod.rs  process.rs  settings.rs  transcribe.rs
src-tauri/src/models/: clip.rs  mod.rs  vtt.rs
src-tauri/src/services/: ffmpeg.rs  mod.rs  openai.rs  vtt_parser.rs  whisper.rs
src/components/: ClipReviewList.tsx  FileDropZone.tsx  ProgressIndicator.tsx  SettingsModal.tsx
src/hooks/: useAppState.ts
src/types/: index.ts
tests/: run-with-logging.sh
